overflow with horizontal scroll on page fix

--- a/src/components/blocks/promo/__container/promo__container.css
+++ b/src/components/blocks/promo/__container/promo__container.css
@@ -9,8 +9,6 @@
 @media screen and (max-width: 939px) {
     .promo__container {
         flex-direction: column;
-        margin-left: -15px;
-        margin-right: -15px;
         gap: 50px;
     }
 }
