--- a/src/components/blocks/promo/__slider-button/promo__slider-button.css
+++ b/src/components/blocks/promo/__slider-button/promo__slider-button.css
@@ -11,7 +11,7 @@
 }
 
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 659px) {
     .promo__slider-button {
         display: none;
     }
