--- a/src/components/blocks/promo/__slider/promo__slider.css
+++ b/src/components/blocks/promo/__slider/promo__slider.css
@@ -11,3 +11,11 @@
     background-size: cover;
     padding-bottom: calc(400 / 870 * 100%);
 }
+
+
+@media screen and (max-width: 939px) {
+    .promo__slider::before {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+}
