--- a/src/components/blocks/search/__modes-list/search__modes-list.css
+++ b/src/components/blocks/search/__modes-list/search__modes-list.css
@@ -1,7 +1,8 @@
-.search__modes-list {
-    gap: 30px;
+@media screen and (min-width: 1040px) {
+    .search__modes-list {
+        gap: 30px;
+    }
 }
-
 
 @media screen and (min-width: 940px) {
     .search__modes-list {
